backend connected to front-end

--- a/frontend/src/components/search-bar/search-box.css
+++ b/frontend/src/components/search-bar/search-box.css
@@ -1,20 +1,31 @@
-
 .container {
- 
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpjWQa9KILupNoKbRKSUodxHUhliEid1-sZw&usqp=CAU);
-   /* Do not repeat the image */
-   background-position: center; /* Center the image */
-   /* Do not repeat the image */
-  ;
- 
+
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpjWQa9KILupNoKbRKSUodxHUhliEid1-sZw&usqp=CAU);
+    /* Do not repeat the image */
+    background-position: center;
+    /* Center the image */
+    /* Do not repeat the image */
+    ;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+
 }
- .box{
-     text-align: center;
-     width: 108%;
-     padding-top: 20%;
-     padding-bottom: 25%;
- }
-.searchField{
+
+.box {
+    text-align: center;
+    width: 108%;
+    padding-top: 20%;
+    padding-bottom: 25%;
+}
+
+.output {
+    background-color: white;
+}
+
+.searchField {
     width: 40%;
     height: 50px;
     background: white;
@@ -24,10 +35,11 @@
     margin-left: auto;
     padding: 0 8px;
 }
-.btn{
-    width:10%;
+
+.btn {
+    width: 10%;
     margin-left: 10px;
-    height:50px;
+    height: 50px;
     background: rgb(98, 171, 240);
     cursor: pointer;
     font-size: 16px;
